Dialog titles show, fixed contrast on FAB, changed grey progress bar background, decreased background memory usage.

--- a/app/src/main/res/drawable/circular_progress_bar_background.xml
+++ b/app/src/main/res/drawable/circular_progress_bar_background.xml
@@ -8,6 +8,6 @@
     android:thickness="2dp"
     android:useLevel="false">
 
-    <solid android:color="#bdbdbd" />
+    <solid android:color="#c4c4c4" />
 
 </shape>
