--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -33,8 +33,8 @@
 
             android:defaultValue="true"
             android:key="24_hour_time"
-            android:summary="Uses 24-hour format instead of AM/PM format"
-            android:title="Use 24-hour format" />
+            android:summary="Uses 24 hour format instead of AM/PM format"
+            android:title="Use 24 hour format" />
 
     </PreferenceCategory>
 
