--- a/app/src/main/res/layout/activity_add_homework.xml
+++ b/app/src/main/res/layout/activity_add_homework.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/add_homework_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:paddingBottom="4dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
@@ -69,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_below="@id/add_homework_name_layout"
+                android:layout_marginTop="4dp"
                 android:paddingBottom="4dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
@@ -108,7 +109,7 @@
                 android:paddingBottom="4dp"
                 android:paddingLeft="14dp"
                 android:paddingRight="16dp"
-                android:paddingTop="12dp">
+                android:paddingTop="10dp">
 
                 <RadioGroup
 
@@ -145,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:onClick="onRadioButtonClicked"
                         android:paddingLeft="26.5dp"
-                        android:text="Custom time"
+                        android:text="Custom date and time"
                         android:textSize="17sp" />
 
                 </RadioGroup>
