--- a/app/src/main/res/layout/dialog_edit_day_edit_class.xml
+++ b/app/src/main/res/layout/dialog_edit_day_edit_class.xml
@@ -5,16 +5,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginTop="16dp">
+    android:paddingLeft="15dp"
+    android:paddingRight="24dp"
+    android:paddingTop="8dp">
 
     <Spinner
 
         android:id="@+id/dialog_edit_day_edit_class_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0.5dp"
-        android:layout_marginRight="21dp"
+        android:layout_marginRight="2dp"
         android:prompt="@string/spinner_prompt"
         android:scrollbars="none" />
 
@@ -24,9 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_edit_day_edit_class_spinner"
-        android:layout_marginLeft="8.5dp"
         android:layout_marginTop="16dp"
-        android:text="Class start time:"
+        android:paddingLeft="8dp"
+        android:text="Start time:"
         android:textColor="#000000"
         android:textSize="15sp" />
 
@@ -37,9 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/dialog_edit_day_edit_class_start_time_label"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="5dp"
         android:gravity="right"
-        android:text="12:00"
         android:textColor="#000000"
         android:textSize="15sp" />
 
@@ -49,9 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dialog_edit_day_edit_class_start_time_label"
-        android:layout_marginLeft="8.5dp"
         android:layout_marginTop="4dp"
-        android:text="Class end time:"
+        android:paddingLeft="8dp"
+        android:text="End time:"
         android:textColor="#000000"
         android:textSize="15sp" />
 
@@ -62,42 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/dialog_edit_day_edit_class_end_time_label"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="5dp"
         android:gravity="right"
-        android:text="13:00"
         android:textColor="#000000"
         android:textSize="15sp" />
-
-    <Button
-
-        android:id="@+id/dialog_edit_day_edit_class_done_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/dialog_edit_day_edit_class_end_time_label"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="12dp"
-        android:background="#00ffffff"
-        android:text="Done" />
-
-    <Button
-
-        android:id="@+id/dialog_edit_day_edit_class_time_picker_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/dialog_edit_day_edit_class_done_button"
-        android:layout_toLeftOf="@+id/dialog_edit_day_edit_class_done_button"
-        android:background="#00ffffff"
-        android:text="Edit Times" />
-
-    <Button
-
-        android:id="@+id/dialog_edit_day_edit_class_delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/dialog_edit_day_edit_class_time_picker_button"
-        android:layout_toLeftOf="@id/dialog_edit_day_edit_class_time_picker_button"
-        android:background="#00ffffff"
-        android:text="Delete" />
 
 </RelativeLayout>
