--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:layout_margin="16dp" />
+                android:layout_margin="16dp"
+                android:visibility="invisible" />
 
         </android.support.design.widget.CoordinatorLayout>
 
