--- a/app/src/main/res/layout/view_homework_list_item.xml
+++ b/app/src/main/res/layout/view_homework_list_item.xml
@@ -5,20 +5,53 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_homework_list_item_linear_layout"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="72dp"
     android:background="@color/white"
     android:clickable="true"
     android:elevation="2dp"
     android:foreground="?android:attr/selectableItemBackground">
 
-    <TextView
+    <RelativeLayout
 
-        android:id="@+id/view_homework_list_item_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="32dp"
-        android:textColor="#000000"
-        android:textSize="15sp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="16dp">
+
+        <ImageView
+
+            android:id="@+id/view_homework_list_item_color_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/color_indicator_homework" />
+
+        <RelativeLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_toRightOf="@id/view_homework_list_item_color_indicator">
+
+            <TextView
+
+                android:id="@+id/view_homework_list_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+
+            <TextView
+
+                android:id="@+id/view_homework_list_item_due"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view_homework_list_item_name"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
