--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -44,16 +44,17 @@
 
                 android:id="@+id/overview_current_class_card_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <RelativeLayout
 
                     android:id="@+id/overview_current_class_card_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingTop="14dp">
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginTop="14dp">
 
                     <TextView
 
@@ -77,7 +78,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/color_indicator_class" />
+                        android:src="@drawable/color_indicator_class_card"
+                        android:translationY="0.5dp" />
 
                 </RelativeLayout>
 
@@ -86,10 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/overview_current_class_card_header"
-                    android:paddingBottom="12dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingTop="6dp">
+                    android:layout_marginBottom="12dp">
 
                     <ProgressBar
 
@@ -149,8 +148,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp">
 
                 <ExpandableListView
@@ -158,8 +157,6 @@
                     android:id="@+id/overview_next_classes_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
                     android:childDivider="#d3d3d3"
                     android:dividerHeight="1dp"
                     android:layoutDirection="rtl"
@@ -185,8 +182,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp">
 
                 <ExpandableListView
@@ -194,8 +191,6 @@
                     android:id="@+id/overview_tomorrow_classes_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
                     android:childDivider="#d3d3d3"
                     android:dividerHeight="1dp"
                     android:layoutDirection="rtl"
