--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -45,8 +45,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="2dp"
                     android:src="@drawable/name"
-                    android:tint="#757575"
-                    android:translationY="-1dp" />
+                    android:tint="#757575" />
 
                 <EditText
 
@@ -59,7 +58,7 @@
                     android:hint="Name"
                     android:inputType="textCapWords"
                     android:singleLine="true"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -82,8 +81,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="2dp"
                     android:src="@drawable/teacher"
-                    android:tint="#757575"
-                    android:translationY="-1dp" />
+                    android:tint="#757575" />
 
                 <EditText
 
@@ -96,7 +94,7 @@
                     android:hint="Teacher"
                     android:inputType="textCapWords"
                     android:singleLine="true"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -120,8 +118,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="2dp"
                     android:src="@drawable/location"
-                    android:tint="#757575"
-                    android:translationY="-1dp" />
+                    android:tint="#757575" />
 
                 <EditText
 
@@ -134,7 +131,7 @@
                     android:hint="Location"
                     android:inputType="textCapWords"
                     android:singleLine="true"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
