--- a/app/src/main/res/layout/activity_add_homework.xml
+++ b/app/src/main/res/layout/activity_add_homework.xml
@@ -45,8 +45,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="2dp"
                     android:src="@drawable/name"
-                    android:tint="#757575"
-                    android:translationY="-1dp" />
+                    android:tint="#757575" />
 
                 <EditText
 
@@ -59,7 +58,7 @@
                     android:hint="Name"
                     android:inputType="textCapWords"
                     android:singleLine="true"
-                    android:textSize="17sp" />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -101,7 +100,6 @@
 
             <RelativeLayout
 
-                android:id="@+id/add_homework_time_radio_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/add_homework_class_layout"
@@ -113,6 +111,7 @@
 
                 <RadioGroup
 
+                    android:id="@+id/add_homework_time_radio_group"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -126,7 +125,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:paddingLeft="26.5dp"
                         android:text="Next lesson"
-                        android:textSize="17sp" />
+                        android:textSize="16sp" />
 
                     <RadioButton
 
@@ -137,7 +136,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:paddingLeft="26.5dp"
                         android:text="Specific lesson"
-                        android:textSize="17sp" />
+                        android:textSize="16sp" />
 
                     <RadioButton
 
@@ -147,7 +146,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:paddingLeft="26.5dp"
                         android:text="Custom date and time"
-                        android:textSize="17sp" />
+                        android:textSize="16sp" />
 
                 </RadioGroup>
 
