--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -78,8 +78,9 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginRight="0.5dp"
                         android:src="@drawable/color_indicator_class_card"
-                        android:translationY="0.5dp" />
+                        android:translationY="1.75dp" />
 
                 </RelativeLayout>
 
