--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
 <resources>
 
-    <style name="app_theme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="chalkboard_theme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:dialogTheme">@style/dialog_theme</item>
