--- a/app/src/main/res/drawable/priority.xml
+++ b/app/src/main/res/drawable/priority.xml
@@ -1,16 +1,13 @@
 <vector
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportHeight="24.0"
-    android:viewportWidth="24.0">
+    android:width="23dp"
+    android:height="23dp"
+    android:viewportHeight="24"
+    android:viewportWidth="24">
 
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M12,19m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M10,3h4v12h-4z" />
+        android:fillColor="#FFF"
+        android:pathData="M6,3A1,1 0 0,1 7,4V4.88C8.06,4.44 9.5,4 11,4C14,4 14,6 16,6C19,6 20,4 20,4V12C20,12 19,14 16,14C13,14 13,12 11,12C8,12 7,14 7,14V21H5V4A1,1 0 0,1 6,3Z" />
 
 </vector>
