--- a/app/src/main/res/layout/dialog_edit_day_edit_class.xml
+++ b/app/src/main/res/layout/dialog_edit_day_edit_class.xml
@@ -5,15 +5,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingLeft="15dp"
+    android:paddingLeft="16dp"
     android:paddingRight="24dp"
-    android:paddingTop="8dp">
+    android:paddingTop="4dp">
 
     <Spinner
 
         android:id="@+id/dialog_edit_day_edit_class_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="3dp"
         android:layout_marginRight="2dp"
         android:prompt="@string/spinner_prompt"
         android:scrollbars="none" />
