--- a/app/src/main/res/layout/view_spinner_item.xml
+++ b/app/src/main/res/layout/view_spinner_item.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
-    android:padding="5dip"
+    android:padding="5dp"
     android:textColor="#000000"
     android:textSize="16sp" />
