--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -93,12 +93,13 @@
             android:summary="Set the class color as the notification background"
             android:title="Flip notification colors" />
 
-        <ListPreference
+        <com.afollestad.materialdialogs.prefs.MaterialListPreference
 
             android:defaultValue="30"
             android:entries="@array/next_class_notification_minutes_text"
             android:entryValues="@array/next_class_notification_minutes_values"
             android:key="next_class_notification_minutes"
+            android:negativeButtonText=""
             android:summary="Choose when a notification for the next class appears"
             android:title="Next class notification timing" />
 
